# Personal-Test-Data-Generator

./: .gitignore  README.md  README_PROJECT.md  compose.yaml  devReadme.md  mysqlAddresses.sql  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/old/: learn-github-actions.yml.txt
.github/workflows/: do-all-test.yml
api/: FakeInfo.js  dockerfile  index.js  jest.config.mjs  package-lock.json  package.json
api/__test__/: address.test.js
api/postman/: test mandatory 1.postman_collection.json
api/src/: FakeInfo.js  index.js
api/src/tests/: address.test.js  cpr.integration.test.mjs  cpr.unit.test.mjs  fakeinfo.test.mjs  name.integration.test.mjs  phone.integration.test.mjs  phone.unit.test.mjs
api/tests/: cpr.integration.test.mjs  cpr.unit.test.mjs  fakeinfo.test.mjs  name.unit.test.mjs  phone.integration.test.mjs  phone.unit.test.mjs
client/: app.js  index.html  package-lock.json  package.json
e2e/: cpr.spec.js  cprInput.spec.js  cprNameGen.spec.js  hello.spec.js  nameGen.spec.js  nameGenDob.spec.js  phone.spec.js
old/: README.md
old/frontend/: index.html
old/js/: README.md
old/src/: api.py
postman/: endpoints.json
sga/: README.md
sga/backend/: backend.js  database.js  methods.js  package-lock.json  package.json  server.js
sga/backend/test/: test.js
sga/frontend/: frontend.js  package.json
