[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-test-data-generator"
version = "0.1.0"
description = "Fake Danish personal data generator for testing"
authors = [{name = "Test Course group"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pytest",
    "pytest-asyncio",
    "requests",
    "playwright",
    "sqlalchemy",
    "alembic",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"